Add changes for frontend dev
